testsuite/tests/ghc-regress/rename/should_fail/rnfail029.hs
-- !!! conflicting exports for a function name
module ShouldFail ( List.map, module ShouldFail ) where
import qualified List
map = undefined
